# sref

./: CMakeLists.txt  LICENSE
cmake/: sref-config.cmake.in
include/sref/: shared_ref.hpp  sref.hpp
